--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <h1>futsal</h1>
-<p>informaçao geral</p>
-<p>noticias da semana</p>
+<p>informaçao <strong>geral</strong></p>
+<p><em>noticias da semana</em></p>
 
