--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
-<h1>futsal</h1>
-<p>informaçao <strong>geral</strong></p>
-<p><em>noticias da semana</em></p>
+<!DOCTYPE html>
+</html>
+<meta charset=¨UTF-8¨>
+     <h1>futsal</h1>
+     <p>informaçao <strong>geral</strong></p>
+     <p><em>noticias da semana</em></p>
 
+</html>
