--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
-</html>
+<head>
+     <link rel=""stylesheet¨ tipe=" tex/css" >
+<link rel=" shortcut icon" href="img1.jpg" type="image/X-icon">
+      <title>Futebol</
 <meta charset=¨UTF-8¨>
-     <h1>futsal</h1>
+</html>
+     <h1>Futsal</h1>
      <p>informaçao <strong>geral</strong></p>
      <p><em>noticias da semana</em></p>
 
 </html>
+
+
+ 
