--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <head>
      <link rel=""stylesheet¨ tipe=" tex/css" >
 <link rel=" shortcut icon" href="img1.jpg" type="image/X-icon">
-      <title>Futebol</
+      <title>Futebol</title>
 <meta charset=¨UTF-8¨>
-</html>
+<html>
      <h1>Futsal</h1>
      <p>informaçao <strong>geral</strong></p>
      <p><em>noticias da semana</em></p>
