--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
+<html>
 <head>
      <link rel=""stylesheet¨ tipe=" tex/css" >
 <link rel=" shortcut icon" href="img1.jpg" type="image/X-icon">
       <title>Futebol</title>
 <meta charset=¨UTF-8¨>
-<html>
+</head>
+<body>
      <h1>Futsal</h1>
      <p>informaçao <strong>geral</strong></p>
      <p><em>noticias da semana</em></p>
-
+     <img width="40%"   src="img2.jpg">
+</body>
 </html>
 
 
