--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
      <h1>Futsal</h1>
-     <p>informaçao <strong>geral</strong></p>
+     <H2><p>informaçao <strong>geral</strong></p></H2>
+     <P>A bola foi umas das primeiras adaptações que o Futsal precisou fazer precisou fazer em relação ao Futebol. A bola usada no campo era grande e quicava muito, para usar na quadra precisava de uma bola menor e mais pesada. E assim foi feito e o Futsal passou a ser conhecido como o “esporte da bola pesada”.
+
+          Outra adaptação que foi feita foi em relação ao número de jogadores de cada equipe no Futsal, já que os 11 jogadores do Futebol de campo não se encaixavam na quadra. Foram tentadas várias formações, até chegarem ao número de 5 jogadores por equipe.
+          O histórico do Futsal no Brasil
+          
+          Em São Paulo/Brasil na década de 1950 o professor Habib Maphus foi responsável pela elaboração de normas para prática do Futsal/Futebol de Salão, além disso fundou a Liga de Futebol de Salão da Associação Cristã de Moços.
+          
+          Ainda na década de 1950 foi fundada a Liga Metropolitana de Futebol de Salão, atualmente Federação de Futebol de Salão do Estado do Rio de Janeiro, a primeira federação estadual do Brasil. Nesse mesmo período foram criadas a federação mineira e a paulista de Futebol de Salão, a partir daí foram fundadas várias federações estaduais pelo Brasil.</P>
      <p><em>noticias da semana</em></p>
      <img width="40%"   src="img2.jpg">
 </body>
